--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "front-end",
   "version": "0.1.0",
+  "homepage": "https://jtitak06.github.io/React-Auth",
   "proxy": "http://localhost:8080/",
   "private": true,
   "dependencies": {
@@ -15,6 +16,8 @@
     "web-vitals": "1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
